# sigmod2021_submisison

./: corr_graph.py  correlate.py  dmv_analysis.py  get_unique_vals.py  manual_plot.py  plot_results.py  preprocess.py  query_generator.py
continuous/: bucketer.py  continuous_correlation_map.py  fast_stasher.py  fit_performance_data.py  gen_linear_map.py  gen_workload.py  generate_target_bucket_for_btree_sort.py  grid_stasher.py  run_airline_data.py  run_chicago_taxi_data.py  run_dataset.py  run_msft_buildings_data.py  run_osm_data.py  run_stash.py  run_stocks_data.py  single_column_stasher.py  stash.py  validate_index_specs.py
cxx/: CMakeLists.txt  benchmark_categorical_index.cpp  run_chicago_exps.sh  run_correlation_index.cpp  run_exps_test.sh  run_linear_correlation_index.sh  run_mapped_correlation_index.sh  run_secondary_index.sh  run_stocks_exps_test.sh
cxx/include/: binary_search_index.h  bucketed_secondary_index.h  categorical_query_engine.h  combined_correlation_index.h  composite_index.h  correlation_indexer.h  correlation_tracker.h  dataset.h  dummy_index.h  dummy_indexer.h  hermit_rewriter.h  index_builder.h  indexer.h  inmemory_column_order_dataset.h  just_sort_index.h  linear_model_rewriter.h  mapped_correlation_index.h  measure_beta_index.h  merge_utils.h  octree_index.h  outlier_index.h  primary_btree_index.h  primary_indexer.h  query_engine.h  rewriter.h  secondary_btree_index.h  secondary_indexer.h  single_column_rewriter.h  target_bucket.h  trs_node.h  trs_tree_rewriter.h  types.h  utils.h  visitor.h
cxx/src/: binary_search_index.hpp  bucketed_secondary_index.hpp  categorical_query_engine.hpp  composite_index.hpp  compressed_column_order_dataset.hpp  correlation_tracker.hpp  index_builder.hpp  just_sort_index.hpp  linear_model_rewriter.hpp  mapped_correlation_index.hpp  merge_utils.hpp  octree_index.hpp  outlier_index.hpp  primary_btree_index.hpp  query_engine.hpp  secondary_btree_index.hpp  single_column_rewriter.hpp  trs_tree_rewriter.hpp
cxx/tests/: test_binary_search_index.cpp  test_composite_index.cpp  test_merge_utils.cpp  test_outlier_index.cpp  test_primary_btree_index.cpp  test_secondary_btree_index.cpp  test_single_column_rewriter.cpp  test_target_bucket.cpp
paper/: gen_selectivity_table.py
paper/experiments/: run_all.sh
paper/experiments/measure_beta/: fit_performance_data.py  measure_beta.sh
paper/experiments/punchline/chicago_taxi/: gen_index_specs.py  gen_queries.sh  plot.py  plot_breakdown_by_sel.py  plot_breakdowns.py  plot_hermit_outliers.py  plot_outliers.py  run_exps_btree.sh  run_exps_octree.sh  run_one_off.sh  run_one_off_btree.sh  run_one_off_octree.sh
paper/experiments/punchline/stocks/: gen_index_specs.py  gen_queries.sh  plot.py  run_exp_btree.sh  run_hermit.sh  run_one_off.sh  run_one_off_btree.sh  run_one_off_octree.sh
paper/experiments/punchline/wise/: gen_index_specs.py  gen_queries.sh  plot.py  plot_breakdown_by_sel.py  plot_hermit_outliers.py  run_exp_btree9.sh  run_exp_octree.sh  run_one_off_octree.sh
paper/plot_scripts/: plot_range_ratio_breakdown.py  plot_target_buckets.py  plot_utils.py
